[gd_scene load_steps=7 format=2]

[ext_resource path="res://ObjectsRelated/Portals/Assets/Portal_32x32_White.png" type="Texture" id=1]
[ext_resource path="res://MiscRelated/ShadersRelated/Shader_PortalSwirl.tres" type="Shader" id=2]
[ext_resource path="res://ObjectsRelated/Portals/Portal.gd" type="Script" id=3]
[ext_resource path="res://ObjectsRelated/Portals/Assets/Portal_32x32_WhiteFrame.png" type="Texture" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 2 )

[node name="Portal" type="Node2D"]
material = SubResource( 1 )
script = ExtResource( 3 )

[node name="PortalSprite" type="Sprite" parent="."]
material = SubResource( 2 )
texture = ExtResource( 1 )

[node name="PortalFrame" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 19

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
